--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header nav h2 a{
     font-weight: 500;
     text-decoration: none;
     color: #000;
-    font-size: 25px;
+    font-size: 26px;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
@@ -128,6 +128,7 @@ header nav .links ul li a:hover{
     font-weight: 500;
     text-align: center;
     position: relative;
+    color: #333333;
 }
 .text-cover h3::before{
     position: absolute;
@@ -151,4 +152,78 @@ header nav .links ul li a:hover{
 .text-cover a:hover{
     background-color: #000;
     color: #fff;
+}
+.our-beginning{
+    width: 100%;
+    padding: 80px 0;
+}
+.our-beginning-container{
+    width: 70%;
+    margin: auto;
+}
+.row-our-beginning{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 25px;
+}
+.col-our-beginning{
+    width: 50%;
+    overflow: hidden;
+}
+.col-our-beginning img{
+    width: 100%;
+    filter: grayscale(80%);
+
+}
+.col-our-beginning h4{
+    text-transform: uppercase;
+    font-size: 30px;
+    margin-bottom: 10px;
+    line-height: 1.1;
+    font-weight: 500;
+}
+.col-our-beginning h6{
+    text-transform: uppercase;
+    color: #777;
+    font-size: 12px;
+    font-weight: 500;
+}
+.col-our-beginning hr{
+    width: 10%;
+    margin: 20px 0px;
+    
+}
+.col-our-beginning p{
+   font-size: 14px;
+   color: #333;
+   margin-top: 20px;
+}
+.col-our-beginning a{
+    text-transform: capitalize;
+    display: inline-block;
+    background: transparent;
+    border: 1px solid #000;
+    color: #000;
+    padding: 15px 40px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: 0.5s;
+    text-decoration: none;
+    margin-top: 30px;
+}
+.col-our-beginning a:hover{
+    color: #fff;
+    background-color: #000;
+}
+.vid{
+    width: 100%;
+    height: 40vh;
+    overflow: hidden;
+}
+.vid video{
+    width: 100%;
+    
+    filter: grayscale(100%);
+
 }
