--- a/css/style.css
+++ b/css/style.css
@@ -281,5 +281,24 @@ header nav .links ul li a:hover{
 .portfolio-links ul li a:hover{
     background-color: #000;
     color: #fff;
-
 }
+.Quote{
+    width: 100%;
+    height: 40vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/images/coffe.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0 0 80px 0;
+    background-attachment: fixed;
+}
+.Quote-container{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    color: #fff;
+    justify-content: center;
+    height: 100%;
+}
+
