--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,18 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+/* Scrollbar */
+::-webkit-scrollbar{
+    width: 15px;
+    
+}
+::-webkit-scrollbar-thumb{
+    background-color: #333;
+    
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #000;
+}
 
 body{
     width: 100%;
@@ -301,4 +313,3 @@ header nav .links ul li a:hover{
     justify-content: center;
     height: 100%;
 }
-
