--- a/css/style.css
+++ b/css/style.css
@@ -548,15 +548,90 @@ header nav .links ul li a:hover{
     width: 100%;
     margin-top: 50px;
 }
-/* .form-message{
-    background-color: aqua;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.form-message .col-form .box-input{
-    display: flex;
-    flex-direction: column;
-}.form-message .col-form .box-input input{
+
+.form-row{
     width: 100%;
-} */
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    column-gap: 20px;
+}
+.col-form-1{
+    width: 50%;
+    
+}
+.col-form-1 input{
+    width: 100%;
+    height: 50px;
+    padding: 15px;
+    cursor: help;
+}
+.mar{
+    margin: 20px 0;
+}
+.col-form-1 input::placeholder{
+    color: #333;
+    font-size: 15px;
+    
+}
+.col-form-2{
+    width: 50%;
+}
+.col-form-2 input{
+    cursor: help;
+    width: 100%;
+    padding: 15px;
+    height: 100%;
+}
+.col-form-2 input::placeholder{
+    color: #333;
+    font-size: 15px;
+}
+.col-form-submit{
+    margin-top: 15px;
+    text-align: right;
+}
+.col-form-submit input[type=submit]{
+    background: transparent;
+    border: 1px solid #000;
+    color: #000;
+    font-size: 13px;
+    padding: 15px 40px;
+    transition: all 0.5s;
+    text-transform:capitalize;
+}
+.col-form-submit input[type=submit]:hover{
+    background-color: #000;
+    color: #fff;
+}
+footer{
+    width: 100%;
+    background-color: #000;
+    
+}
+.footer-container{
+    padding: 40px 0;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+}
+.social-links{
+    margin: 10px 0;
+
+}
+.social-links ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+}
+.social-links ul li a{
+    color: #ffffff;
+    font-size: 25px;
+}
+footer h4{
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 500;
+}
